fix(ui): remove extra scrollbar and add space to Multi Select label
- Change overflow: scroll to overflow: auto in stylesEditor.css

- Add space to MultiSelect label in fieldTypes.ts

Fixes #27591

--- a/packages/ui/components/editor/stylesEditor.css
+++ b/packages/ui/components/editor/stylesEditor.css
@@ -28,7 +28,7 @@
   position: relative;
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px;
-  overflow: scroll;
+  overflow: auto;
   resize: vertical;
   height: auto;
   min-height: 40px;
